--- a/craigslistjr_rails/app/views/layouts/_nav.erb
+++ b/craigslistjr_rails/app/views/layouts/_nav.erb
@@ -1,6 +1,8 @@
 <div id="nav-bar">
   <% if current_user %>
-    <a href="/logout"
+    <a href="/logout">Logout</a>
   <% else %>
+    link_to login_path
+    link_to new_user_path
   <% end %>
 </div>
