--- a/craigslistjr_rails/app/views/layouts/_nav.erb
+++ b/craigslistjr_rails/app/views/layouts/_nav.erb
@@ -1,8 +1,8 @@
 <div id="nav-bar">
   <% if current_user %>
-    <a href="/logout">Logout</a>
+    <%= link_to 'Logout', logout_path %>
   <% else %>
-    link_to login_path
-    link_to new_user_path
+    <%= link_to 'Login', login_path %>
+    <%= link_to 'Signup', new_user_path %>
   <% end %>
 </div>
