--- a/craigslistjr_rails/app/views/categories/index.html.erb
+++ b/craigslistjr_rails/app/views/categories/index.html.erb
@@ -1,5 +1,5 @@
 <ul>
   <% @categories.each do |category| %>
-    <li><%= category.title %></li>
+    <li><%= link_to category.title, category %></li>
   <% end %>
 </ul>
