--- a/craigslistjr_rails/app/views/users/edit.html.erb
+++ b/craigslistjr_rails/app/views/users/edit.html.erb
@@ -1,17 +1,17 @@
-<%=  form_for(@user) do |f|  %>
+<%=  form_for(current_user) do |f|  %>
 
   <!-- Error handling: -->
-  <% if @user.errors.any? %>
-    <h2><%= pluralize(@user.errors.count, "error") %> prohibited this user from being saved:</h2>
+  <% if current_user.errors.any? %>
+    <h2><%= pluralize(current_user.errors.count, "error") %> prohibited this user from being saved:</h2>
     <ul>
-      <% @user.errors.full_messages.each do |message| %>
+      <% current_user.errors.full_messages.each do |message| %>
         <li><%= message %></li>
       <% end %>
     </ul>
   <% end %>
 
   <%= f.label :user_name %><br>
-  <%= f.text_field :user_name, :placeholder => @user.user_name %><br>
+  <%= f.text_field :user_name, :placeholder => current_user.user_name %><br>
   <%= f.label :password %><br>
   <%= f.password_field :password %><br>
   <%= f.label :password_confirmation %><br>
