--- a/craigslistjr_rails/app/views/layouts/_nav.erb
+++ b/craigslistjr_rails/app/views/layouts/_nav.erb
@@ -1,5 +1,6 @@
 <div id="nav-bar">
   <% if current_user %>
+    <%= link_to 'Edit Account', edit_user_path(current_user) %>
     <%= link_to 'Logout', logout_path %>
   <% else %>
     <%= link_to 'Login', login_path %>
