--- a/craigslistjr_rails/app/views/categories/show.html.erb
+++ b/craigslistjr_rails/app/views/categories/show.html.erb
@@ -1,5 +1,5 @@
 <ul>
   <% @articles.each do |article| %>
-    <li>$<%= article.price %> - <%= article.title %></li>
+    <li>$<%= article.price %> - <%= link_to article.title, article_path(article) %></li>
   <% end %>
 </ul>
