--- a/craigslistjr_rails/app/views/layouts/_nav.erb
+++ b/craigslistjr_rails/app/views/layouts/_nav.erb
@@ -1,4 +1,5 @@
 <div id="nav-bar">
+    <%= link_to 'Home', root_path %>
   <% if current_user %>
     <%= link_to 'Edit Account', edit_user_path(current_user) %>
     <%= link_to 'Logout', logout_path %>
