--- a/craigslistjr_rails/app/views/categories/show.html.erb
+++ b/craigslistjr_rails/app/views/categories/show.html.erb
@@ -1,5 +1,7 @@
 <ul>
   <% @articles.each do |article| %>
-    <li>$<%= article.price %> - <%= link_to article.title, article_path(article) %></li>
+    <li>$<%= article.price %> - <%= link_to article.title, category_article_path(@category, article) %></li>
   <% end %>
 </ul>
+
+<%= link_to 'Add posting', new_category_article_path(@category) %>
