Current user can view add posting link

--- a/craigslistjr_rails/app/views/categories/show.html.erb
+++ b/craigslistjr_rails/app/views/categories/show.html.erb
@@ -4,4 +4,6 @@
   <% end %>
 </ul>
 
-<%= link_to 'Add posting', new_category_article_path(@category) %>
+<% if current_user %>
+  <%= link_to 'Add posting', new_category_article_path(@category) %>
+<% end %>
