--- a/craigslistjr_rails/app/views/articles/show.html.erb
+++ b/craigslistjr_rails/app/views/articles/show.html.erb
@@ -1,3 +1,7 @@
 <h2>$<%= @article.price %> - <%= @article.title %></h2>
 <h4>Email me at: <%= @article.email %></h4>
 <p><%= @article.description %></p>
+
+<% if current_user %>
+  <%= link_to 'Delete posting',category_article_path(@category, @article), :method => :delete %>
+<% end %>
